Add update function.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,6 +30,8 @@
 					<a href="index.html" th:href="@{/}">Home</a>
 					<a href="users/status.html"
 						th:href="@{/users/status}">Status</a>
+					<a href="users/update.html"
+					   th:href="@{/users/update}">Update</a>
 					<a href="recipes/recipes.html"
 					   th:href="@{/recipes}">Recipes</a>
 					<div id="logged-in-info">
