--- a/src/main/resources/templates/users/status.html
+++ b/src/main/resources/templates/users/status.html
@@ -17,22 +17,23 @@
 				<legend>Have you successfully made the exchange?</legend>
 				<input id="yes"
 					   type="radio"
-					   name="ReceivedKefir"
+					   name="receivedKefir"
 					   th:value="true"
 					   required />
 				<label for="yes">Yes, I was able to make contact.</label>
+					<br>
 				<input id="no"
 					   type="radio"
-					   name="ReceivedKefir"
+					   name="receivedKefir"
 					   th:value="false"
 					   required />
 				<label for="no">No, I was unable to make contact.</label>
 				<span class="formError"
-					  th:if="${#fields.hasErrors('ReceivedKefir')}"
-					  th:errors="*{ReceivedKefir}">You must choose
+					  th:if="${#fields.hasErrors('receivedKefir')}"
+					  th:errors="*{receivedKefir}">You must choose
 				       an option.</span>
 				<br>
-				<legend>If yes, would you like to be added to the list of people sharing kefir in your area or to delete your account?</legend>
+<!--				<legend>Would you like to be added to the list of people sharing kefir in your area or to delete your account?</legend>
 				<input id="convert"
 					   type="radio"
 					   name="convertToSharing"
@@ -49,7 +50,7 @@
 					  th:if="${#fields.hasErrors('convertToSharing')}"
 					  th:errors="*{convertToSharing}">You must choose
 				       an option.</span>
-					<br>
+					<br> -->
 					<input type="submit" value="Submit"/>
 				</form>
 			</div>
