Add security and error config.

--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>
 		<header th:replace="layout :: site-header" />
-		Something has gone wrong that shouldn't have. Are you sure
-		you're supposed to be at this URL?
+		<h1>Unexpected Error!</h1>
+		Something has gone wrong.
+		<br>
+		Are you <em>sure</em> you're supposed to be at this URL?
 			<footer th:replace="layout :: site-footer" />
 	</body>
 
