--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -31,7 +31,7 @@
 					<a href="users/status.html"
 						th:href="@{/users/status}">Status</a>
 					<a href="users/update.html"
-					   th:href="@{/users/update}">Update</a>
+					   th:href="@{/users/update}">Update Account</a>
 					<a href="recipes/recipes.html"
 					   th:href="@{/recipes/index}">View Recipes</a>
 					<a href="recipes/recipes.html"
